Se esta trabajando con la funcionalidad de Builds, ya se tiene la funcionalidad basica, falta @tags

--- a/templates/gencoui/rndr_builds.html
+++ b/templates/gencoui/rndr_builds.html
@@ -218,9 +218,9 @@
 			    	
 								{% endverbatim %}
 								<div class="checkbox" >
-								    <label hidden>
-								      <input type="checkbox" id="chkAsList" hidden>As List
-								    </label>
+								    <label >
+								      <input type="checkbox" id="chkAsList" ng-click="update_directorioelemento()">As List
+								    </label>								
 								</div>
 					    		<div id="jstreeBuilds" style="margin-top:20px;min-height: 50%;background-color: white;overflow:auto"></div>
 					    										
