--- a/user_templates/3_rndr.tmpl
+++ b/user_templates/3_rndr.tmpl
@@ -16,6 +16,5 @@ public class $e.name{
         }    
         #end for
 }
+$ [@ DAL/d 5-ee0aed79-743e-773/ @][@ DAL/d 5-4d77a618-d24b-3bf3 @][@ DAL/d 5-ee0aed79-743e-773/ @]
 #end for
-
-[@ DAL/d 5-0c04e084-18cc-5221 @] 
