Se trabajo con la creacion de proyectos(folders) y tambien se inicia email validation en el signin

--- a/templates/gencoui/menu.html
+++ b/templates/gencoui/menu.html
@@ -100,8 +100,8 @@
           <div class="row" style="margin-top:100px">
             <div class="col-md-1"></div>
             <div class="col-md-10">
-              <div class="panel panel-default" style="border-width:1px; border-color:#49c1ab;box-shadow: 5px 5px 5px #3a3838">
-                <div class="panel-body" style="background-color: rgb(160,223,204); text-align:center">
+              <div class="panel panel-default" style="border-width:1px; box-shadow: 5px 5px 5px #3a3838">
+                <div class="panel-body" style=" text-align:center; border-bottom:1px solid #e3e3e3; background-color:#eee">
                   <img src="{% static 'gencoui/img/rndr/environment.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="64px" height="64px"></img>
                   <h2 style="color: #202077">Environments</h2>
                   <p style="font-size:14px">Define a stack of languajes</p>
