--- a/templates/gencoui/rndr_langs.html
+++ b/templates/gencoui/rndr_langs.html
@@ -136,7 +136,7 @@
 			    			{% verbatim %}
 					      	<div class="panel-body" ng-if="language_selected.nombre!=null">
 					      		
-												<h3 style="display:inline">{{ language_selected.nombre }}</h3>
+												<h3>{{ language_selected.nombre }}</h3>
 												<a class="btn btn-default btn-xs" role="button" data-toggle="modal" data-placement="bottom" data-tt="tooltip" title="Add Type" ng-click="new_type(lang.id_lenguaje)">
 													<!-- <span class="glyphicon btn-glyphicon glyphicon-plus" ></span> -->
 													+ Datatype			
