--- a/static/gencoui/css/rndr-style-dev_deprecate.css
+++ b/static/gencoui/css/rndr-style-dev_deprecate.css
@@ -225,3 +225,14 @@
 
 .rndr-scale { transition: all .2s ease-in-out; }
 .rndr-scale:hover { transform: scale(1.3); }
+
+
+.rnder-envcard {
+    background-color: #ffffff;
+    display: inline;
+    padding: 8px;
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #cccccc;
+}
