--- a/static/gencoui/css/rndr-style.css
+++ b/static/gencoui/css/rndr-style.css
@@ -304,3 +304,209 @@
 
 	.rndr-scale { transition: all .2s ease-in-out; }
 	.rndr-scale:hover { transform: scale(1.3); }
+
+
+/*rndr_style_dev*/
+
+		body,html {
+		    width: 100%;
+		    height: 100%;
+		    padding: 0;
+		    margin: 0;
+		    /*font-family: 'Roboto', sans-serif;*/
+		    font-family: 'Gotham Rounded';
+		}
+
+
+		.icon-btn {
+		    padding: 1px 1px 2px 2px;
+		    border-radius:50px;
+		    padding-right: 2px;
+    		padding-bottom: 3px;
+		}
+
+
+		 .well {
+		 	     background-color: transparent;
+		 }  */ 
+
+		.btn-circle {	
+			width: 48px;
+			height: 48px;
+		    padding: 10px 10px;
+		    border-radius: 35px;
+		    font-size: 12px;
+		    line-height: 1.33;
+		    text-align: center;
+		}
+
+		
+	    .editor{ 
+	        position: absolute;
+	        //top: 5px;
+	        right: 8px;
+	        bottom: 0;
+	        left: 0px;
+	        min-height: 400px;
+	    }
+
+	    .editor2{ 
+	        position: absolute;
+	       // top: 5px;
+	        right: 30px;
+	        bottom: 0;
+	        left: 8px;
+	        min-height: 400px;
+	    }
+
+	    #rendernav{
+	    	min-height: 400px;
+	    	//background-color:#eee;		    	
+	    }
+
+
+		#rendertoolbar{
+	    	//background-color:#2F3129;	
+	    	padding-top:8px;
+	    	height: 48px;	
+	    }
+
+		#main {
+		    float: right;
+		    position: absolute;
+		    height: 100%;
+		    min-height: 200px;
+		    right: 0;
+		    left: 250px;
+		    overflow: initial;
+		   // background-color:#eee;
+		}
+
+		#sidebar {
+		   
+		    width: 250px;		   
+		    float: left;
+		    position: absolute;
+		    height: 100%;
+		    overflow-y: hidden;
+		   //overflow-x: scroll;
+		    min-height: 300px;
+	    	//background-color:#eee;	    	
+		}
+
+		#dragbar {
+		    background-color: #ccc;
+		    height: 100%;
+		    float: right;
+		    width: 8px;
+		    cursor: col-resize;
+		}
+
+		#ghostbar  {
+		    width: 8px;
+		    background-color: #000;
+		    opacity: 0.5;
+		    position: absolute;
+		    cursor: col-resize;
+		    z-index: 999;
+		    
+		}
+
+		#main1 {
+		    float: right;
+		    position: absolute;
+		    /*min-height: 400px;*/
+		    right: 0;
+		    left: 450px;
+		    /*overflow: scroll;*/
+		   
+		}
+
+		#sidebar1 {
+		    
+		    width: 450px;
+		    float: left;
+		    position: absolute;
+		    height: 100%;
+		    //overflow-y: hidden;
+		    //overflow: scroll;
+		    //min-height: 400px;
+	    	//background-color:#eee;
+		}
+
+		#dragbar1 {
+		    background-color: #777;
+		    height: 100%;
+		    float: right;
+		    width: 8px;
+		    cursor: col-resize;
+		}
+
+		#ghostbar1 {
+		    width: 8px;
+		    background-color: #000;
+		    opacity: 0.5;
+		    position: absolute;
+		    cursor: col-resize;
+		    z-index: 999;
+		}
+
+		.card {
+		    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+		}
+
+		.grad {
+		    height: 160px;
+		    width: 100%;
+		    background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+		    color: white;
+		    opacity: 0.95;
+		}
+
+
+
+.bubble_message {
+  position: relative;
+  padding: 10px 20px;
+  color: white;
+  background: #0B93F6;
+  border-radius: 25px;
+  float: right;
+  width: 200px;
+}
+
+
+.bubble_message:before {
+    content: ' ';
+    position: absolute;
+    width: 0;
+    height: 0;
+    right: 20px;
+    top: auto;
+    bottom: -20px;
+    border: 10px solid;
+    border-color: #0b93f6 #0b93f6 transparent transparent;
+}
+
+
+.render-table  th, tr>td{
+
+	padding: 8px 8px 8px 8px;
+}
+
+
+
+.rndr-scale { transition: all .2s ease-in-out; }
+.rndr-scale:hover { transform: scale(1.3); }
+
+
+.rndr-envcard {
+    background-color: #ffffff;
+    display: inline;
+    padding: 8px;
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #cccccc;
+    margin: 4px;
+}
