--- a/templates/gencoui/rndr_builds.html
+++ b/templates/gencoui/rndr_builds.html
@@ -146,26 +146,37 @@
 
 		    	<div class="modal-header">
 		    		
-		    		<div style="display:inline">
-		          		<!-- <a class="btn icon-btn btn-default btn-xs" ng-click="submit()" data-placement="bottom"data-tt="tooltip" title="Save">
-							<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
-						</a> -->
+		    		<div style="display:inline">		       
 						<h3 style="margin-top:0px">{{proyecto.nombre}}<sub style="color:#CCCCCC">Project</sub></h3>
+						
 					</div>
-
+						
 	          	</div>
 
 	          	<div class="" style="height:88%;margin-right:0px; overflow:auto">
 				  	<div class="col-sm-6" style="height: 100%; border-right: solid 1px #e5e5e5;">
 						<div style="margin-top: 15px; margin-left: 15px;">
-							{% verbatim %}
+							
+
+							<div id="jstreeFolders"></div>
+				    		
+		
+				    	</div>
+				  	</div>
+				  	<div class="col-sm-6 .hidden-xs" style="height: 100%;  background-color:#ecf0f1">
+				  		
+
+
+
+
+				  		
 					    	<!-- <h4 style="display:inline;margin-top: 10px;margin-right:10px">Folders </h4> -->
 
-					    		<div style="height: 60px; float: right"><!-- 
-					    		<h5 style="margin-top: 10px;" ng-if="repository_selected.data.id_repositorio != null">{{repository_selected.data.nombre}}</h5>
-					    		<h5 style="margin-top: 10px;" ng-if="repository_selected.data.id_repositorio == null">No Repository Selected</h5>	 -->
-					    		{{repository_selected.data.nombre}}
+					    		<div style="height: 20px; margin-top:5px">
 
+					    			<!-- <img src="{% static 'gencoui/img/rndr/repository.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="24px" height="24px"></img> -->
+					    {% verbatim %}		
+					    			
 									<div class="dropdown" style="display:inline;">
 																				
 										<button class="btn btn-default dropdown-toggle btn-xs" type="button" id="dropdownRepo" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -184,17 +195,21 @@
 										
 									</div>
 									
-									{% endverbatim %}
+									{{repository_selected.data.nombre}}
 									
-								</div>
 
-							<div id="jstreeFolders"></div>
-				    		
-		
-				    	</div>
-				  	</div>
-				  	<div class="col-sm-6 .hidden-xs" style="height: 100%;  background-color:#ecf0f1">
-				  		{% verbatim %}
+									<div style="float: right">				
+										<button class="btn btn-default  btn-xs" type="button"  data-placement="bottom" data-tt="tooltip" title="Build Folders,Code and Files from metadata selected" ng-click="buildProject()" id="btnBuildProject">
+											<span>Build</span>
+						{% endverbatim %}
+						
+											<img src="{% static 'gencoui/img/rndr/build_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="24px" height="24px" style="display:inline;">
+											</img>
+						
+						{% verbatim %}							
+										</button>
+									</div>
+								</div>
 					    		
 				  		<div class="" style="height: 90%; margin-top:15px;background-color:#fff;box-shadow: 3px 3px 3px #ccc;" >
 
@@ -488,11 +503,11 @@
 		</div>
 	</div>
 
-	<div class="modal fade" id="info-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	<div class="modal fade" id="message-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 
 	    <div class="modal-dialog" >
 
-	        <div class="modal-content" style="padding: 20px;margin: 20px 0;border-left-width: 20px;border-radius: 3px; border-left-color: #ce4844;">
+	        <div class="modal-content" style="padding: 20px;margin: 20px 0;border-left-width: 20px;border-radius: 3px; border-left-color: #ce4844;" id="borderMessage">
 		        <div class="modal-header">
 			    	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
 		        	<h4 class="modal-title">Information</h4>
@@ -557,7 +572,7 @@
     
     <script>
     var editor = ace.edit("editor");
-    editor.setTheme("ace/theme/eclipse");
+    editor.setTheme("ace/theme/monokai");
     editor.getSession().setMode("ace/mode/python");
     editor.$blockScrolling = Infinity;
 
@@ -567,50 +582,8 @@
     editor2.getSession().setMode("ace/mode/java");
     editor2.$blockScrolling = Infinity;
 
-    // var editor3 = ace.edit("editor3");
-    // editor3.setTheme("ace/theme/default");
-    // editor3.getSession().setMode("ace/mode/java");
-    // editor3.$blockScrolling = Infinity;
     </script>
  
-  <script>
-        
-        $(function () {
-
-
-			
-		 //      $.get( "http://localhost:8000/gencoui/tree/1", function( data ) {
-	
-			// console.log(data.dirs);
-	  //       $('#jstreeBuilds').jstree(true).settings.core.data = data.dirs;
-
-
-	        
-   //      	$('#jstreeBuilds').jstree(true).refresh();
-			// });	
-		    
-	    });
-
-
-	function getCode(){
-		$.get( "http://localhost:8000/gencoui/tree/1", function( data ) {
-		//editor.setValue(data);	
-			console.log(data);
-	        $('#jstreeBuilds').jstree(true).settings.core.data = data;
-        	$('#jstreeBuilds').jstree(true).refresh();
-		});	
-	};
-
-
-	function openFile(id_template){
-		angular.element($("#ctrl_builds")).scope().addTab(id_template);
-		angular.element($("#ctrl_builds")).scope().$apply();
-		console.log(id_template);
-
-	};
-
-
-  </script>
 
 {% endblock %}
 
