--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,8 +2,7 @@
 {% load staticfiles %}
 {% load widget_tweaks %}
 {% block title %}SnippetWS{% endblock %}
-{% block extrastyle %}
-	<link rel="stylesheet" href="{% static 'gencoui/css/rndr-style-dev.css' %}">
+{% block extrastyle %}	
 	<link rel="stylesheet" href="{% static 'gencoui/css/rndr-style.css' %}">
 {% endblock %}
 {% block extrajs %}
@@ -20,8 +19,8 @@
 
 	<div class="row" >
 		<div class="col-sm-8" style="">
-			<div >
-				
+			<div style="text-align:center; padding: 20px">
+				<img src="{% static 'gencoui/img/rndr/takeatoolflatlogo.png' %}">
 			</div>
 
 		</div>
