--- a/templates/gencoui/rndr_env.html
+++ b/templates/gencoui/rndr_env.html
@@ -22,7 +22,7 @@
 					</div>
 					<div class="row">
 						<div class="col-xs-12 col-sm-5">
-						<div style="padding-left: 5%; padding-right:15px;  height:400px; overflow: auto;border-right: 1px solid #e3e3e3;">
+						<div style="padding-left: 5%; padding-right:15px;  min-height:375px; overflow: auto;border-right: 1px solid #e3e3e3;">
 							
 						<!-- 	<div id="jstreeEnvs">
 				    		</div> -->
@@ -75,7 +75,7 @@
 						</div>	
 						</div>
 						<div class="col-xs-12 col-sm-7" style="">
-							<div style="height:400px;padding-top: 15px; padding-right: 15px; overflow:auto;">
+							<div style="min-height:375px;padding-top: 15px; padding-right: 15px; overflow:auto;">
 
 								<div class="panel panel-default" style="border:none; background-color:transparent" ng-if="GencoEntorno.id_entorno!=null">
 						
