--- a/templates/gencoui/rndr_header.html
+++ b/templates/gencoui/rndr_header.html
@@ -3,31 +3,25 @@
     <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            {% if user.is_authenticated %}
             <a class="navbar-brand" href="#">
-            <img alt="Brand" src="{% static 'gencoui/img/rndr/Generics_saturn.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="40px" data-toggle="modal" data-target="#myModal" sytle="top:10px">
-            </a>
+            {% if user.is_authenticated %}
+            <div style="background-color: #fff; border-radius: 10px; padding-top: 3px; padding-bottom: 3px; padding-left:10px; padding-right: 10px;margin-top: 8px;" data-toggle="modal" data-target="#menu">
+                <img alt="Brand" src="{% static 'gencoui/img/rndr/getbeta.png' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="76px"  sytle="top:10px">
+            </div>
+            {% else %}
+            <div style="background-color: #fff; border-radius: 10px; padding-top: 3px; padding-bottom: 3px; padding-left:10px; padding-right: 10px;margin-top: 8px;">
+                <img alt="Brand" src="{% static 'gencoui/img/rndr/getbeta.png' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="76px" sytle="top:10px">
+            </div>
+            
+            
             {% endif %}
+            </a>
         </div>
         <div style="float: right; margin-top:20px">
             {% if user.is_authenticated %}
                 <p style="color:white; display:inline;">{{request.session.wsname}} - {{ user.get_username }}</p>
-
-                <div class="dropdown" style="color:white; display:inline;">
-                  <button class="btn btn-primary dropdown-toggle btn-xs" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    <span class="glyphicon glyphicon-menu-hamburger" ></span>
-                  </button>
-                  <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-                    <!-- <li>Switch Workspace</li>
-                    {% for ws in workspaces %}
-                                            <li >
-                                                <a  href="{{ ws.id_grupo.id_grupo }}"> {{ ws.id_grupo.nombre }} </a>
-                                              </li>
-                    {% endfor %}
-                    <li role="separator" class="divider"></li> -->
-                    <li><a href="/login/logout">logout</a></li>
-                  </ul>
-                </div>
+                
+                
             {% else %}
                 <p style="color:white; display:inline;">Welcome</p>
             {% endif %}
@@ -70,7 +64,7 @@
 </nav>
 
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="menu" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 
     <div class="modal-dialog" role="document"  style="margin-left: 10px; margin-top: 60px; max-width: 400px;">
         
@@ -85,20 +79,44 @@
                 <tr>
                     <td width="60px" height="60px" onmouseover="this.style.background='#EBF4EB';" onmouseout="this.style.background='white';">
                         <div style="text-align:center" >
-                            <a href="/gencoui/groups/add">
-                                <img src="{% static 'gencoui/img/Generics.png' %}" width="48px" >
+                            <a href="/gencoui">
+                                <img src="{% static 'gencoui/img/rndr/environment.svg' %}" width="48px"></div>
                             </a>
                         </div>
                     </td>
                     <td width="60px" height="60px" onmouseover="this.style.background='#EBF4EB';" onmouseout="this.style.background='white';">
-                        <div style="text-align:center"><img src="{% static 'gencoui/img/pebro_black.png' %}" width="48px"></div></td>
+                        <div style="text-align:center">
+                            <a href="{% url 'gencoui:module' 'langs' %}">
+                                <img src="{% static 'gencoui/img/rndr/langs.svg' %}" width="48px"></div>
+                            </a>
+                        </div>
+                    </td>
                     <td width="60px" height="60px" onmouseover="this.style.background='#EBF4EB';" onmouseout="this.style.background='white';">
-                        <div style="text-align:center"><img src="{% static 'gencoui/img/take_tool.png' %}" width="48px"></div></td>
+                        <div style="text-align:center">
+                            <a href="{% url 'gencoui:module' 'entities' %}">
+                                <img src="{% static 'gencoui/img/rndr/repository.svg' %}" width="48px"></div>
+                            </a>
+                        </div>
+                    </td>
                 </tr>
                 <tr>
-                    <td width="60px" height="60px" onmouseover="this.style.background='#EBF4EB';" onmouseout="this.style.background='white';"><div style="text-align:center"><img src="{% static 'gencoui/img/take_tool.png' %}" width="48px"></div></td>
-                    <td width="60px" height="60px" onmouseover="this.style.background='#EBF4EB';" onmouseout="this.style.background='white';"><div style="text-align:center"><img src="{% static 'gencoui/img/Generics.png' %}" width="48px"></div></td>
-                    <td width="60px" height="60px" onmouseover="this.style.background='#EBF4EB';" onmouseout="this.style.background='white';"><div style="text-align:center"><img src="{% static 'gencoui/img/pebro_black.png' %}" width="48px"></div></td>
+                    <td width="60px" height="60px" onmouseover="this.style.background='#EBF4EB';" onmouseout="this.style.background='white';">
+                        <!-- <div style="text-align:center">
+                            <img src="{% static 'gencoui/img/rndr/design_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="48px" >
+                            </img>
+                        </div> -->
+                    </td>
+                    <td width="60px" height="60px" onmouseover="this.style.background='#EBF4EB';" onmouseout="this.style.background='white';">
+                        <!-- <div style="text-align:center">
+                            <img src="{% static 'gencoui/img/rndr/build_shortcut.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="48px" >
+                            </img>
+                        </div> -->
+                    </td>
+                    <td width="60px" height="60px" onmouseover="this.style.background='#EBF4EB';" onmouseout="this.style.background='white';">
+                        <div style="text-align:center" data-placement="bottom" data-tt="tooltip" title="Close Session">
+                            <a class="btn btn-default btn-xs" role="button" data-toggle="modal" data-placement="bottom" data-tt="tooltip" title="Add Type" href="/login/logout">Logout</a>
+                        </div>                        
+                    </td>
                 </tr>
             </table>
             
