--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -44,7 +44,7 @@
 							    {{ form.password|add_class:"form-control" }}
 						</div>
 						<button class="btn btn-primary btn-sm" type="submit">Login</button>
-						<a href="/login/register" style="padding-left:10px">Forgot password?</a> 
+						<a href="/login/user/password/reset" style="padding-left:10px">Forgot password?</a> 
 					</form>
 					<div style="padding-top:20px;">
 						<label>Do you have an account?</label><a  style="padding-left:15px;" href="/login/register">Sign up</a> 
